dts: qcom: sc7180/sc7280: introduce next branch changes.

--- a/arch/arm64/boot/dts/qcom/sc7180.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180.dtsi
@@ -93,6 +93,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_0: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -127,6 +128,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_100: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -156,6 +158,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_200: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -185,6 +188,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_300: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -214,6 +218,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_400: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -243,6 +248,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 0>;
+			clocks = <&cpufreq_hw 0>;
 			L2_500: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -272,6 +278,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 1>;
+			clocks = <&cpufreq_hw 1>;
 			L2_600: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
@@ -301,6 +308,7 @@
 
 			#cooling-cells = <2>;
 			qcom,freq-domain = <&cpufreq_hw 1>;
+			clocks = <&cpufreq_hw 1>;
 			L2_700: l2-cache {
 				compatible = "cache";
 				cache-level = <2>;
