--- a/arch/arm64/boot/dts/qcom/sc7180.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180.dtsi
@@ -3120,6 +3120,12 @@
 						};
 					};
 
+                                        port@1 {
+                                                reg = <1>;
+                                                dsi_out: endpoint {
+                                                };
+                                        };
+
 					port@2 {
 						reg = <2>;
 						dpu_intf0_out: endpoint {
