--- a/arch/arm64/boot/dts/qcom/sm7125-idp.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-idp.dts
@@ -1,8 +1,10 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * SC7180 IDP board device tree source
+ * SM7125 IDP board device tree source
  *
  * Copyright (c) 2019, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2023, 99degree <https://github.com/99degree/>
+ *
  */
 
 /dts-v1/;
@@ -396,6 +398,12 @@
 			reg = <0 0xf7000000 0 0x8c00000>;
 			
 		};
+
+                mdata_mem: mpss-metadata {
+                        alloc-ranges = <0x0 0xa0000000 0x0 0x20000000>;
+                        size = <0x0 0x4000>;
+                        no-map;
+                };
 	};
 };
 
@@ -897,12 +905,29 @@
 };
 
 &remoteproc_mpss {
-//	compatible = "qcom,sc7180-mss-pil";
-//	iommus = <&apps_smmu 0x461 0x0>, <&apps_smmu 0x444 0x3>;
-	memory-region = <&mpss_mem>;
+//        compatible = "qcom,sc7180-mss-pil";
+//        reg = <0 0x04080000 0 0x4040>, <0 0x04180000 0 0x48>;
+//        reg-names = "qdsp6", "rmb";
 
-	firmware-name = "qcom/sm7125/miatoll/modem.mdt";
+        clocks = <&gcc GCC_MSS_CFG_AHB_CLK>,
+                 <&gcc GCC_MSS_Q6_MEMNOC_AXI_CLK>,
+                 <&gcc GCC_MSS_NAV_AXI_CLK>,
+                 <&gcc GCC_MSS_SNOC_AXI_CLK>,
+                 <&gcc GCC_MSS_MFAB_AXIS_CLK>,
+                 <&rpmhcc RPMH_CXO_CLK>;
+        clock-names = "iface", "bus", "nav", "snoc_axi", "mnoc_axi", "xo";
 
+        iommus = <&apps_smmu 0x461 0x0>, <&apps_smmu 0x444 0x3>;
+        memory-region = <&mba_mem>, <&mpss_mem>, <&mdata_mem>;
+
+        resets = <&aoss_reset AOSS_CC_MSS_RESTART>,
+                 <&pdc_reset PDC_MODEM_SYNC_RESET>;
+        reset-names = "mss_restart", "pdc_reset";
+
+        qcom,halt-regs = <&tcsr_regs_1 0x3000 0x5000 0x4000>;
+        qcom,spare-regs = <&tcsr_regs_2 0xb3e4>;
+
+        firmware-name = "qcom/sm7125/miatoll/modem.mdt";
         status = "okay";
 };
 
